<resources>
    <string name="app_name">Bidyarthi</string>

    <!-- Ads on/off setup -->
    <string name="ads_switch">false</string>

    <!-- Ads code setup -->
    <string name="banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="fullpage">ca-app-pub-3940256099942544/1033173712</string>

    <!-- Link setup -->
    <string name="privacy">https://www.google.com/</string>
    <string name="websiteurl">https://www.google.com/</string>
    <string name="termscondition">https://www.google.com/</string>
    <string name="moreurl">https://www.google.com/</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="biswjtdhar_gmail_com">mmmcgirlshsschool@gmail.com</string>
    <string name="facebook_page">Follow on Facebook</string>
    <string name="communication">Communication</string>
    <string name="nav_rate">Rate or Feedback</string>
    <string name="nav_share">Share</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_terms_conditions">Terms and Conditions</string>
    <string name="website">Visit Website</string>
    <string name="more">More</string>
</resources>