<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/baseline_home"
            android:title="Home"/>
        <item
            android:id="@+id/principle"
            android:icon="@drawable/baseline_message"
            android:title="Message From The Principle"/>
        <item
            android:id="@+id/website"
            android:icon="@drawable/website"
            android:title="@string/website"/>
    </group>
    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/rate"
                android:title="@string/nav_rate"/>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/nav_share"/>
            <item
                android:id="@+id/nav_privacy_policy"
                android:icon="@drawable/privacy"
                android:title="@string/nav_privacy_policy"/>
            <item
                android:id="@+id/nav_terms_conditions"
                android:icon="@drawable/terms"
                android:title="@string/nav_terms_conditions"/>
            <item
                android:id="@+id/more"
                android:icon="@drawable/more"
                android:title="@string/more"/>
            <item
                android:id="@+id/credit"
                android:icon="@drawable/website"
                android:title="Credit"/>
            <item
                android:id="@+id/exit"
                android:icon="@drawable/baseline_exit"
                android:title="Exit"/>
        </menu>
    </item>


</menu>